--- a/content/2.projekty/2.takk.md
+++ b/content/2.projekty/2.takk.md
@@ -1,4 +1,5 @@
-title: TAKK! śźćłźźą
+title: Zażółć gęślą jaźń
 ---
-Tymczasowa akcja kulturalna.
+Costam costam
 Film
+![Text alternative](takk.png)
