home page served

--- a/content/1.intro.md
+++ b/content/1.intro.md
@@ -1,16 +1,16 @@
-title: O mnie
+title: About me
 ---
-Tutaj na przykład tekst powitalny.
+Some welcome text.
 
-### Bio (kolejna sekcja)
+### Bio (additional section)
 
 Na na na
+### Another header
+![Text alternative](wlo.jpg)
 
-### Osiągnięcia
+Unordered list:
 
-Lista super osiągnięć:
-
-*   cos
-*   tez cos
-*   tez tez cos
-*   i to tez
+*   Markdown
+*   is
+*   something
+*   cool
