many upgrades. still not there

--- a/content/1.intro.md
+++ b/content/1.intro.md
@@ -1,16 +1,8 @@
 title: Intro
+tags: irrelevant
+type: page
+date: 2012-09-17
 ---
+![WLO](wlo.jpg)
+
 Some welcome text.
-
-### Bio (additional section)
-
-Na na na
-### Another header
-![Text alternative](wlo.jpg)
-
-Unordered list:
-
-*   Markdown
-*   is
-*   something
-*   cool
